test/Fail/Issue779pattern.err
Issue779pattern.agda:6.3-7.12: error: [NotAValidLetBinding]
Not a valid let binding
when scope checking the declaration
  record R where
    bla : D → D
    bla c = c
    field F : Set
